sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: unclosed character literal
  var tri = 'faux' 
                 ^AlgBubbleSort1:4: error: unclosed character literal
  while tri = 'faux' {
                   ^AlgBubbleSort1:14: error: unclosed character literal
        tri = 'vrai'
                   ^AlgBubbleSort1:3: error: ';' expected but something found.
  var tri = 'faux' 
                 ^