sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var tri = 'faux' 
  while tri = 'faux' {
    m= get NombreValeurs
    var n = 0
    for (i < 1 to m){
      if plusPetitQue(i, i+1){
        echange(i, j)
        n= n+1        
      }
    }
    if (n = 0){
        tri = 'vrai'
  }
  n=0 
 }
}